Improve geometry creation with osm-testdata (#816)
* Add a copy of the grid test of osm-testdata

* Fix issues detected in the multipolygon builders

* Move the predicate logic for multipolygons in the entity geometry builder